# gn-google

./: .clang-format-ignore  .editorconfig  gn_main  navbar.md  profile_bitset_only.txt  profile_main_check.txt  profile_reused_map.txt  project.config
.github/workflows/: sync.yml
conductor/: README.md  product.md  tech-stack.md  workflow.md
docs/: reference.md
examples/modules/: BUILD.gn  first.cc  first.h  hello.cc  module.modulemap  second.cc  second.h  third.cc  third.h
infra/config/: main.star
infra/recipes/: gn.py
infra/recipes/gn.expected/: ci_linux.json  ci_mac.json  ci_win.json  cipd_exists.json  cipd_register.json  cq_linux.json  cq_mac.json  cq_win.json
rules_gn/: OWNERS  README.md
src/base/: logging.cc  logging.h  sha2.cc  sha2_unittest.cc
src/base/files/: async_coordinator.h  async_coordinator_default.h  async_coordinator_win.h  async_file.h  async_file_default.cc  async_file_default.h  async_file_unittest.cc  async_file_win.cc  async_file_win.h  async_file_win_unittest.cc  async_object_win.h  async_operation_win.h  file.h  file_buffer.h  file_buffer_default.cc  file_buffer_win.cc  file_enumerator_posix.cc  file_enumerator_win.cc  file_path.h  file_path_posix.cc  file_path_win.cc  file_util_win.cc  file_win.cc
src/gn/: action_target_generator.cc  action_target_generator.h  analyzer.cc  args.cc  bazel_generator.cc  bazel_generator.h  binary_target_generator.cc  binary_target_generator_unittest.cc  build_settings.cc  build_settings.h  builder.cc  builder_record.cc  builder_record.h  builder_unittest.cc  command_check.cc  command_desc.cc  command_format.cc  command_format.h  command_format_unittest.cc  command_gen.cc  command_outputs.cc  command_refs.cc  commands.cc  commands.h  compile_commands_writer.cc  compile_commands_writer_unittest.cc  config_values.h  deps_iterator.cc  deps_iterator.h  desc_builder.cc  desc_builder_unittest.cc  err.cc  filesystem_utils.cc  filesystem_utils.h  filesystem_utils_unittest.cc  function_exec_script.cc  function_expand_directory.cc  function_expand_directory_unittest.cc  function_get_label_info.cc  function_get_path_info.cc  (+85 more)
src/gn/format_test_data/: 086.gn  086.golden  089.gn  089.golden  091.gn  091.golden  094.gn  094.golden  095.golden  096.gn  096.golden  097.golden  099.gn  099.golden  100.golden  101.gn  101.golden  102.gn  102.golden  103.golden  104.golden
src/gn/starlark/crates/args/: Cargo.toml
src/gn/starlark/crates/args/src/: args.rs  errors.rs  expand.rs  formatter.rs  lib.rs  tests.rs  unpack.rs
src/gn/starlark/crates/attr/: Cargo.toml
src/gn/starlark/crates/attr/src/: allow_files.rs  attr.rs  cfg.rs  ctx.rs  errors.rs  globals.rs  lib.rs  schema.rs  traits.rs  value.rs
src/gn/starlark/crates/depset/: Cargo.toml
src/gn/starlark/crates/depset/src/: depset.rs  errors.rs  globals.rs  iter.rs  lib.rs  unpack.rs
src/gn/starlark/crates/loader/: Cargo.toml
src/gn/starlark/crates/loader/src/: errors.rs  lib.rs  loader.rs
src/gn/starlark/crates/providers/: Cargo.toml
src/gn/starlark/crates/providers/src/: errors.rs  globals.rs  lib.rs  provider_instance.rs  provider_type.rs
src/util/: build_config.h  sys_info.cc  sys_info_unittest.cc  worker_pool.cc
tools/: build-gn.sh  run_formatter.sh  run_linter.sh  update_flatbuffer_schemas.sh  update_reference.sh
tools/jj/: config.toml  rustfmt.sh
(+58 files in other folders)
