[package]
name = "args"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
types = { path = "../types" }
depset = { path = "../depset" }
starlark = { workspace = true }
starlark_derive = { workspace = true }
allocative = { workspace = true }
thiserror = { workspace = true }
either = { workspace = true }

[dev-dependencies]
testutils = { path = "../testutils" }
