[package]
name = "providers"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[lib]
doctest = false

[dependencies]
allocative = { workspace = true }
either = { workspace = true }
starlark = { workspace = true }
starlark_derive = { workspace = true }
thiserror = { workspace = true }
types = { path = "../types" }

[dev-dependencies]
testutils = { path = "../testutils" }
